[gd_scene load_steps=5 format=3 uid="uid://d2y17dk6of3xq"]

[ext_resource type="Script" uid="uid://2iwvxmt12vtk" path="res://house.gd" id="1_6syyc"]
[ext_resource type="Texture2D" uid="uid://dgg7n3orgter6" path="res://true_house.png" id="2_o1325"]
[ext_resource type="Texture2D" uid="uid://b1k0fak7gaip7" path="res://roof_house.png" id="3_vy7fe"]
[ext_resource type="Texture2D" uid="uid://d6df44xnjxns" path="res://door.png" id="4_o1325"]

[node name="house" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_6syyc")

[node name="main_house" type="Sprite2D" parent="."]
position = Vector2(1, 0)
scale = Vector2(3.6, 3.6)
texture = ExtResource("2_o1325")

[node name="roof" type="Sprite2D" parent="main_house"]
z_index = 70
position = Vector2(0, -2.72222)
scale = Vector2(1, 1.10938)
texture = ExtResource("3_vy7fe")

[node name="door" type="Sprite2D" parent="main_house"]
z_index = 50
position = Vector2(-2, 70)
texture = ExtResource("4_o1325")

[node name="Location" type="Area2D" parent="."]
position = Vector2(-10, 103)
scale = Vector2(3.6, 3.6)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Location"]
polygon = PackedVector2Array(-51.9444, -59.4444, -52.7778, 44.7222, 52.7778, 44.7222, 53.6111, -59.4444)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2(3.6, 3.6)
polygon = PackedVector2Array(-66.1111, -59.1667, -66.1111, 86.1111, -14.4444, 85.8333, -14.4444, 79.1667, -58.8889, 79.1667, -59.1667, -35, 53.6111, -35, 55, 79.1667, 10.5556, 79.1667, 10.5556, 85.8333, 62.2222, 86.3889, 65, -59.1667)

[connection signal="area_entered" from="Location" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Location" to="." method="_on_area_2d_area_exited"]
